# liverun

./: .gitignore  CMakeLists.txt  README.md  main.cpp
scripts/: install.sh  run_tests.sh  uninstall.sh
src/: config.h  core.cpp  core.h  liverun.h  logger.h  main.cpp  reloader.cpp  reloader.h
src/cmd/: command.cpp  command.h
src/process/: builder.cpp  builder.h  manager.cpp  manager.h  monitor.cpp  monitor.h
src/util/: parser.cpp  parser.h
tests/: CMakeLists.txt  test_application.cpp  test_builder.cpp  test_command.cpp  test_helpers.h  test_main.cpp  test_performance.cpp  test_process_manager.cpp  test_process_monitor.cpp  test_validator.cpp
